--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>PB Hotel Consulting – 35 Years of experience</title>
+
+    <meta name="description" content="PB Hotel Consulting offers over 35 years of international experience in hotel management, development, marketing, and recruitment. We provide expert consulting for hotels, resorts, and tourism projects." />
+
+    <meta name="keywords" content="hotel consulting, hospitality consulting, hotel development, hotel marketing, hotel audits, hotel recruitment, tourism strategy, Pierre Berthier, PB Hotel Consulting, international hospitality, hotel investment, Peru, France" />
+
+    <link rel="canonical" href="https://www.pbhotel-consulting.com" />
+    <link rel="alternate" hreflang="x-default" href="https://www.pbhotel-consulting.com" />
+
+
+
+
+    <meta property="og:title" content="PB Hotel Consulting – Global Hospitality Strategy & Development" />
+    <meta property="og:description" content="Strategic hotel consulting services with 35+ years of experience. From concept to operations, we help maximize your hotel's success." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.pbhotel-consulting.com" />
+    <meta property="og:image" content="/images/ic_pb_logo.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PB Hotel Consulting – Hospitality Strategy & Development" />
+    <meta name="twitter:description" content="Expert consulting services for hotels and resorts – marketing, audits, operations, recruitment, and more." />
+    <meta name="twitter:image" content="/images/ic_pb_logo.png" />
+
+    <meta name="author" content="PB Hotel Consulting" />
+</head>
+
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "PB Hotel Consulting",
+        "url": "https://www.pbhotel-consulting.com",
+        "logo": "https://www.pbhotel-consulting.com/images/ic_pb_logo.png",
+        "description": "PB Hotel Consulting offers over 35 years of international experience in hotel management, development, marketing, and recruitment.",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-123-456-7890",
+            "contactType": "Customer Service",
+            "areaServed": "Worldwide",
+            "availableLanguage": ["English", "Spanish", "French"]
+        }
+    }
+</script>
+
+</body>
 </html>
